[package]
description = "A matching engine implementation with Rust utilizing Aman Kumar's optimized-lob"
edition = "2021"
license = "MIT"
name = "myrtle-wyckoff-dstack"
readme = "README.md"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
ethers = "2.0.14"
optimized-lob = {path = "../../matching-engine-rs/optimized-lob"}
rocket = "0.5.1"
serde = "1.0.210"

[[bin]]
name = "myrtle-wyckoff-dstack"
path = "src/main.rs"
