[package]
description = "A matching engine implementation with Rust utilizing Aman Kumar's optimized-lob"
edition = "2021"
license = "MIT"
name = "myrtle-wyckoff-dstack"
readme = "README.md"
version = "0.1.0"

[profile.release]
codegen-units = 1 # Single codegen unit for maximum optimization
lto = true # Link-time optimization for smaller, faster binaries
opt-level = "z" # Optimize for size (can use "3" for max speed)

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
alloy = { version = "0.5", features = ["full"] }
optimized-lob = {git = "https://github.com/markuspluna/matching-engine-rs.git"}
# optimized-lob = {path = "../../matching-engine-rs/optimized-lob"}
rocket = { version = "0.5.1", features = ["json"] }
serde = "1.0.210"
tokio = { version = "1", features = ["full"] }
serde_json = "1.0.109"
rand = "0.8.5"
aes = "0.8.4"
aes-gcm = { version = "0.10.3", features = ["heapless"] }
tracing = "0.1.40"
reqwest = "0.12.9"
hkdf = "0.12"
sha2 = "0.10"

[[bin]]
name = "myrtle-wyckoff-dstack"
path = "src/main.rs"
